--- a/src/components/containers/BreadCrumb/BreadCrumb.less
+++ b/src/components/containers/BreadCrumb/BreadCrumb.less
@@ -48,9 +48,10 @@
   }
 
   &-sort {
+    display: flex;
+
     .netflix-app__breadcrumb-label {
       opacity: .6;
-      cursor: none;
     }
   }
 }
