--- a/src/components/containers/Header/Header.less
+++ b/src/components/containers/Header/Header.less
@@ -60,6 +60,6 @@
     max-width: 103rem;
     text-transform: uppercase;
     color: @color-white;
-    margin: auto;
+    margin: 3.5rem auto 0;
   }
 }
