--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -8,3 +8,5 @@
 @color-dusty-gray: #979797;
 @color-emperor:    #555555;
 @color-tundora:    #424242;
+@color-mine:       #323232;
+@color-bastille:   #2A202D;
