--- a/src/components/common/Input/Input.less
+++ b/src/components/common/Input/Input.less
@@ -2,10 +2,10 @@
 
 .netflix-app {
   &__input {
-    border: 1px solid red;
     height: 5.3rem;
     font-size: 2rem;
     padding: 0 1.9rem;
+    border: none;
     border-radius: .4rem;
   }
 }
