--- a/src/App.less
+++ b/src/App.less
@@ -4,6 +4,11 @@ html, body {
   font-size: 10px;
 }
 
+h1 {
+  padding: 0;
+  margin: 0;
+}
+
 .netflix-app {
   position: relative;
   padding: 5.4rem;
