--- a/src/components/common/ModalWindow/style.less
+++ b/src/components/common/ModalWindow/style.less
@@ -26,6 +26,7 @@
   }
 
   &-title {
+    margin: 6.3rem 0 3.8rem 0;
     font-size: 4rem;
     text-transform: uppercase;
     color: @color-white;
