--- a/src/components/common/Form/Form.less
+++ b/src/components/common/Form/Form.less
@@ -63,6 +63,10 @@
       height: 3.5rem;
       text-transform: uppercase;
 
+      &.submit {
+        height: 5.9rem;
+      }
+
       &:nth-child(1) {
         background-color: @color-mine-shaft;
         border: 1px solid @color-carnation;
