Task 6: Implement BackEnd; add Redux
fix addMovie popup Genre input

Task 6: Implement BackEnd; add Redux

add redux; add redux-thunk; create store, reducers, actions; implement function to fetch data

add Redux ToolKit; rework logic

--- a/src/components/common/MovieItem/MovieItem.less
+++ b/src/components/common/MovieItem/MovieItem.less
@@ -6,13 +6,18 @@
   flex-direction: column;
   max-width: 31.9rem;
   max-height: 50.7rem;
-  margin: 0 5.5rem 3.7rem 0;
+  margin: 0 5.5rem 5.1rem 0;
   color: @color-white;
 
   &-image {
     height: 100%;
     width: 100%;
     object-fit: cover;
+  }
+
+  &-image-wrapper {
+    width: 31.9rem;
+    height: 45.5rem;
   }
 
   &-year-name {
