--- a/template/index.html
+++ b/template/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src 'self' 'unsafe-inline' *; img-src 'self' data: *"
+    />
     <title>Netflix Shadow Copy</title>
   </head>
   <body>
+    <script>
+      var initial_state = null;
+    </script>
     <div id="app"></div>
   </body>
 </html>
