Task 7: Install formik, implement a possibility to “Add movie”, “Edit movie” and “Delete movie”
core refactor; rework logic, create new redux actions

cod refactor; implement addmoview functionality

1111

inplement addmovie option

create validation; (for all the fields except dropdown)

add validation; code refactor

--- a/src/components/common/Dropdown/Dropdown.less
+++ b/src/components/common/Dropdown/Dropdown.less
@@ -3,6 +3,7 @@
 .netflix-app__dropdown {
   position: relative;
   display: flex;
+  flex-direction: column;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
