--- a/src/components/common/Input/Input.less
+++ b/src/components/common/Input/Input.less
@@ -6,6 +6,10 @@
     font-size: 2rem;
     padding: 0 1.9rem;
     border: none;
-    border-radius: .4rem;
+    border-radius: 0.4rem;
+  }
+  &__input-error-label {
+    margin-top: 1rem;
+    color: @color-carnation;
   }
 }
